# docs_v2

./: .gitignore  docs.json  quickstart.mdx
api-reference/: openapi.json
api-reference/extraction/: extract-data.mdx
api-reference/jobs/: results.mdx
api-reference/parser/: get-parse-job-status.mdx  openapi-v1.json  openapi-v2.json  parse-document-v2.mdx  parse-document.mdx
api-reference/pdf-editor/: edit-pdf.mdx
document-processing/: parsing.mdx  vision-api.mdx
faq/: api.mdx
tooling/: .env.example  Makefile  README.md  pyproject.toml
tooling/doc_sync/: config.py
tooling/doc_sync/cli/: coverage.py  inventory.py  judge.py  stub.py  sync.py
tooling/doc_sync/enrichment/: enrich.py  stubs.py
tooling/doc_sync/judge/: judge.py  source_collector.py
tooling/doc_sync/mdx/: loader.py  writer.py
tooling/doc_sync/prompts/: enrich_endpoint.md  generate_stub.md  judge_endpoint.md
tooling/doc_sync/spec/: loader.py
tooling/docs/: IMPLEMENTATION_PLAN.md
tooling/tests/: test_integration_sync.py  test_mdx_loader.py  test_mdx_writer.py  test_spec_loader.py
tooling/tests/fixtures/: sample.mdx  sample_spec.json
